--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
             <div class="tab-content-header section-header">
                 <h2>APICT MetaQuote Language 5 Coding Class</h2>
                 <p>Learn to develop your own trading indicators and expert advisors with our comprehensive MQL5 programming courses.</p>
-                <span class="toggle-indicator">▼</span>
+                <span class="toggle-indicator">👨‍🎓</span>
             </div>
 
             <ul class="document-list">
@@ -271,7 +271,7 @@
                                     <button class="doc-btn doc-btn-primary">
                                         <i class="fas fa-question-circle"></i> Quiz
                                     </button>
-                                    <a href="#" class="doc-btn doc-btn-secondary">
+                                    <a href="https://drive.google.com/uc?export=download&id=17ooOdjWNn9Odwh01oTM4rTTS-vGXZGfC" class="doc-btn doc-btn-secondary">
                                         <i class="fas fa-file-pdf"></i> Download PDF
                                     </a>
                                     <button class="doc-btn doc-btn-tertiary">
@@ -317,7 +317,7 @@
                                     <button class="doc-btn doc-btn-primary">
                                         <i class="fas fa-question-circle"></i> Quiz
                                     </button>
-                                    <a href="#" class="doc-btn doc-btn-secondary">
+                                    <a href="https://drive.google.com/uc?export=download&id=172XwyplMQGLW3ZekhBI2vDDrsSytJ9Q9" class="doc-btn doc-btn-secondary">
                                         <i class="fas fa-file-pdf"></i> Download PDF
                                     </a>
                                     <button class="doc-btn doc-btn-tertiary">
@@ -363,7 +363,7 @@
                                     <button class="doc-btn doc-btn-primary">
                                         <i class="fas fa-question-circle"></i> Quiz
                                     </button>
-                                    <a href="#" class="doc-btn doc-btn-secondary">
+                                    <a href="https://drive.google.com/uc?export=download&id=1CX0lU8gN8_DVb1mBosabJNmM188UCnhi" class="doc-btn doc-btn-secondary">
                                         <i class="fas fa-file-pdf"></i> Download PDF
                                     </a>
                                     <button class="doc-btn doc-btn-tertiary">
@@ -409,7 +409,7 @@
                                     <button class="doc-btn doc-btn-primary">
                                         <i class="fas fa-question-circle"></i> Quiz
                                     </button>
-                                    <a href="#" class="doc-btn doc-btn-secondary">
+                                    <a href="https://drive.google.com/file/d/1grD0PSs36UdmFxykNItE_hEKyLxxfpqY/view?usp=sharing" class="doc-btn doc-btn-secondary">
                                         <i class="fas fa-file-pdf"></i> Download PDF
                                     </a>
                                     <button class="doc-btn doc-btn-tertiary">
@@ -455,7 +455,7 @@
                                     <button class="doc-btn doc-btn-primary">
                                         <i class="fas fa-question-circle"></i> Quiz
                                     </button>
-                                    <a href="#" class="doc-btn doc-btn-secondary">
+                                    <a href="https://drive.google.com/file/d/1zvJ-Tw0QVx-A0OIuSlp5m4ccfnEvMIal/view?usp=sharing" class="doc-btn doc-btn-secondary">
                                         <i class="fas fa-file-pdf"></i> Download PDF
                                     </a>
                                     <button class="doc-btn doc-btn-tertiary">
@@ -496,7 +496,7 @@
             <div class="tab-content-header section-header">
                 <h2>APICT Forex Trading Class</h2>
                 <p>Master the fundamentals of forex trading with our comprehensive course designed for beginners and intermediate traders.</p>
-                <span class="toggle-indicator">▼</span>
+                <span class="toggle-indicator">👨‍🎓</span>
             </div>
 
             <ul class="document-list">
