--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
     <header>
         <div class="container">
-            <h1>Alpha Phoenix Treders Planet</h1>
-            <p>Connect with all the tools needed to master the trading revolution</p>
+            <h1>Alpha Phoenix Trading Matrix</h1>
+            <p>Alpha Phoenix Trading Matrix (APTM) is the next-gen trading ecosystem where education, tools, and community converge. Learn from experts, teach strategies, and access freelance opportunities—all powered by integrated MetaTrader copy-trading, live chat with trade mirroring, and AI-driven task management. Customize your dashboard with smart assistants that analyze, summarize, and streamline your workflow. Whether trading forex, stocks, or crypto, APTM gives you the edge to collaborate, automate, and dominate the markets.</p>
         </div>
     </header>
 
@@ -52,7 +52,7 @@
                                     <a href="#" class="doc-btn doc-btn-primary">
                                         <i class="fas fa-download"></i> MetaTrader 5
                                     </a>
-                                    <a href="#" class="doc-btn doc-btn-secondary">
+                                    <a href="https://drive.google.com/uc?export=download&id=1wMwqxbrNXQMQUS4zRnlHJu1m6V151f9i" class="doc-btn doc-btn-secondary">
                                         <i class="fas fa-file-pdf"></i> Download PDF
                                     </a>
                                     <a href="#" class="doc-btn doc-btn-tertiary">
@@ -268,9 +268,9 @@
                                 <h3>Introduction to MQL5 Platform</h3>
                                 <p>Get started with MQL5 programming by learning about the MetaEditor development environment, basic program structure, and how to create your first simple indicator.</p>
                                 <div class="document-buttons">
-                                    <button class="doc-btn doc-btn-primary">
+                                    <a href="https://docs.google.com/forms/d/e/1FAIpQLScfkWQNi7q7ChawDLedePISgc0CULwcpX59oU15yHIPGlmWEQ/viewform?usp=header" class="doc-btn doc-btn-primary">
                                         <i class="fas fa-question-circle"></i> Quiz
-                                    </button>
+                                    </a>
                                     <a href="https://drive.google.com/uc?export=download&id=17ooOdjWNn9Odwh01oTM4rTTS-vGXZGfC" class="doc-btn doc-btn-secondary">
                                         <i class="fas fa-file-pdf"></i> Download PDF
                                     </a>
@@ -314,9 +314,9 @@
                                 <h3>MQL5 Fundamentals</h3>
                                 <p>Learn the core programming concepts including variables, data types, functions, and program flow control. This course provides the foundation for developing trading algorithms.</p>
                                 <div class="document-buttons">
-                                    <button class="doc-btn doc-btn-primary">
+                                    <a href="https://docs.google.com/forms/d/e/1FAIpQLSdU3-CpacuXRmueKoHwfW_eQkGthVTr2Bs87mArCxluPRcmzA/viewform?usp=sharing" class="doc-btn doc-btn-primary">
                                         <i class="fas fa-question-circle"></i> Quiz
-                                    </button>
+                                    </a>
                                     <a href="https://drive.google.com/uc?export=download&id=172XwyplMQGLW3ZekhBI2vDDrsSytJ9Q9" class="doc-btn doc-btn-secondary">
                                         <i class="fas fa-file-pdf"></i> Download PDF
                                     </a>
@@ -360,9 +360,9 @@
                                 <h3>MQL5 Arrays</h3>
                                 <p>Master array handling in MQL5 with comprehensive coverage of static and dynamic arrays, array functions, and their practical applications in trading algorithms.</p>
                                 <div class="document-buttons">
-                                    <button class="doc-btn doc-btn-primary">
+                                    <a href="https://docs.google.com/forms/d/e/1FAIpQLSekxXWprHaD4We1hXoK97mUpv-7arVPoss1h0TXGE8qxWDzEQ/viewform?usp=sharing" class="doc-btn doc-btn-primary">
                                         <i class="fas fa-question-circle"></i> Quiz
-                                    </button>
+                                    </a>
                                     <a href="https://drive.google.com/uc?export=download&id=1CX0lU8gN8_DVb1mBosabJNmM188UCnhi" class="doc-btn doc-btn-secondary">
                                         <i class="fas fa-file-pdf"></i> Download PDF
                                     </a>
@@ -406,10 +406,10 @@
                                 <h3>MQL5 Operators</h3>
                                 <p>Comprehensive guide to all MQL5 operators including arithmetic, assignment, comparison, logical, and bitwise operators with practical trading algorithm examples.</p>
                                 <div class="document-buttons">
-                                    <button class="doc-btn doc-btn-primary">
+                                    <a href="https://docs.google.com/forms/d/e/1FAIpQLSe0e9cMZQLfs7wszm6U2D_6IMYZfVAM4SqyWWeiG38B8xP3XA/viewform?usp=dialog" class="doc-btn doc-btn-primary">
                                         <i class="fas fa-question-circle"></i> Quiz
-                                    </button>
-                                    <a href="https://drive.google.com/file/d/1grD0PSs36UdmFxykNItE_hEKyLxxfpqY/view?usp=sharing" class="doc-btn doc-btn-secondary">
+                                    </a>
+                                    <a href="https://drive.google.com/uc?export=download&id=1grD0PSs36UdmFxykNItE_hEKyLxxfpqY" class="doc-btn doc-btn-secondary">
                                         <i class="fas fa-file-pdf"></i> Download PDF
                                     </a>
                                     <button class="doc-btn doc-btn-tertiary">
@@ -452,10 +452,10 @@
                                 <h3>MQL5 Strategy Tester</h3>
                                 <p>Learn to properly test your trading strategies using MetaTrader 5's built-in strategy tester, including optimization techniques and interpreting test results.</p>
                                 <div class="document-buttons">
-                                    <button class="doc-btn doc-btn-primary">
+                                    <a href="https://docs.google.com/forms/d/e/1FAIpQLSeanAh7cOvZtQNEwmPxXjJ0xnVC0d1obfQXXq6Wtip5UQEpvQ/viewform?usp=sharing" class="doc-btn doc-btn-primary">
                                         <i class="fas fa-question-circle"></i> Quiz
                                     </button>
-                                    <a href="https://drive.google.com/file/d/1zvJ-Tw0QVx-A0OIuSlp5m4ccfnEvMIal/view?usp=sharing" class="doc-btn doc-btn-secondary">
+                                    <a href="https://drive.google.com/uc?export=download&id=1zvJ-Tw0QVx-A0OIuSlp5m4ccfnEvMIal" class="doc-btn doc-btn-secondary">
                                         <i class="fas fa-file-pdf"></i> Download PDF
                                     </a>
                                     <button class="doc-btn doc-btn-tertiary">
