--- a/index.html
+++ b/index.html
@@ -49,13 +49,13 @@
                                 <h3>APICT Chart Patterns</h3>
                                 <p>Learn how chart patterns work and discover how the APICT Chart Pattern tool can automatically detect them with speed and precision.</p>
                                 <div class="document-buttons">
-                                    <a href="#" class="doc-btn doc-btn-primary">
+                                    <a href="https://www.mql5.com/en/channels/01e9f0bf2c13da01" class="doc-btn doc-btn-primary">
                                         <i class="fas fa-download"></i> MetaTrader 5
                                     </a>
                                     <a href="https://drive.google.com/uc?export=download&id=1wMwqxbrNXQMQUS4zRnlHJu1m6V151f9i" class="doc-btn doc-btn-secondary">
                                         <i class="fas fa-file-pdf"></i> Download PDF
                                     </a>
-                                    <a href="#" class="doc-btn doc-btn-tertiary">
+                                    <a href="https://youtu.be/JwHsG-JzeKc?si=yRO7GYWMsg8ojiCe" class="doc-btn doc-btn-tertiary">
                                         <i class="fas fa-play-circle"></i> Video Tutorial
                                     </a>
                                 </div>
