--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <!-- Library Tab -->
         <div class="tab-content active" id="library">
             <div class="tab-content-header attention-pulse">
-                <h2>Alpha Phoenix Intelligent Computer Technology Trend Analysis</h2>
+                <h2>APICT Trend MT5 and MT4 Tools</h2>
                 <p>Explore our curated library of expert trading resources, featuring comprehensive documents, guides, and tools focused on trend analysis.</p>
                 <span class="toggle-indicator">▼</span>
             </div>
